--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/SANSRunWindow.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/SANSRunWindow.ui
@@ -937,6 +937,56 @@
         </widget>
        </item>
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_10" >
+         <item>
+          <widget class="QGroupBox" name="groupBox_4" >
+           <property name="title" >
+            <string>Options</string>
+           </property>
+           <layout class="QHBoxLayout" name="horizontalLayout_2" >
+            <property name="topMargin" >
+             <number>2</number>
+            </property>
+            <item>
+             <widget class="QCheckBox" name="plot_check" >
+              <property name="text" >
+               <string>Plot result</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="verbose_check" >
+              <property name="text" >
+               <string>Verbose</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="log_colette" >
+              <property name="text" >
+               <string>Log Colette cmds</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_4" >
+           <property name="orientation" >
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0" >
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item>
         <spacer name="verticalSpacer_5" >
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
@@ -948,52 +998,6 @@
           </size>
          </property>
         </spacer>
-       </item>
-       <item>
-        <widget class="QGroupBox" name="groupBox_4" >
-         <property name="title" >
-          <string>Options</string>
-         </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_2" >
-          <property name="topMargin" >
-           <number>2</number>
-          </property>
-          <item>
-           <widget class="QCheckBox" name="plot_check" >
-            <property name="text" >
-             <string>Plot result</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="verbose_check" >
-            <property name="text" >
-             <string>Verbose</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="log_colette" >
-            <property name="text" >
-             <string>Log Colette cmds</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer_4" >
-            <property name="orientation" >
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0" >
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
-        </widget>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_15" >
@@ -1653,7 +1657,7 @@ p, li { white-space: pre-wrap; }
             <item>
              <widget class="QLineEdit" name="phi_min" >
               <property name="enabled" >
-               <bool>false</bool>
+               <bool>true</bool>
               </property>
               <property name="sizePolicy" >
                <sizepolicy vsizetype="Maximum" hsizetype="Expanding" >
@@ -1679,7 +1683,7 @@ p, li { white-space: pre-wrap; }
             <item>
              <widget class="QLineEdit" name="phi_max" >
               <property name="enabled" >
-               <bool>false</bool>
+               <bool>true</bool>
               </property>
               <property name="sizePolicy" >
                <sizepolicy vsizetype="Maximum" hsizetype="Expanding" >
